force-app/main/default/objects/SalesOrder__c/SalesOrder__c.object-meta.xml
<CustomObject>
    <label>Sales Order</label>
    <nameField>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>