force-app/main/default/objects/SalesOrder__c/fields/Booking_Unit__c.field-meta.xml
<CustomField>
    <fullName>Booking_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Unit</label>
    <referenceTo>Booking_Unit__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>