force-app/main/default/objects/SalesOrder__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>OpportunityUnitsUnit</relationshipName>
    <type>Lookup</type>
</CustomField>